last day to push

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /*GLOBAL STYLES*/
-
+@import url(https://fonts.googleapis.com/css?family=Averia+Libre:300|Atma:600);
 html, body {
     
     height:100%;
@@ -8,19 +8,19 @@ html, body {
 body {
     margin:0px;
     padding:0px;
-    background-color:#190d01;
+    background-color:#2E3C3D;
     font-family:'Trebuchet MS', Verdana, sans-serif;
-    font-size:16px;
+    font-size:1em;
     font-weight:500;
-    color:#c2f0f0;
+    color:#FFF;
+    font-family: 'Averia Libre', cursive;
 }
 
 h1, h2, h3 {
     margin:0px;
     padding:0px;
-    color:#ff99ff;
-    font-family:'Comic Sans MS', Verdana, sans-serif;
-    font-weight:bold;
+    color:#FB888B;
+    font-family: 'Atma', cursive;   
 }
 
 h1 {
@@ -28,32 +28,33 @@ h1 {
 }
 
 p {
-    color:#ffffb3;
     margin:15px 0px;
     line-height:20px;
+    font-size:1.25em;
 }
 
 a {
-    color:#ff6633;
-    text-decoration: none;
+    color:#FB888B;
+    text-decoration:none;
 }
 
 a:hover {
-    color:#ffa31a;
-    font-weight:bold;
+    color:#7092BE;
 }
 
 figure {
     padding:10px;
-    background-color:#F65969;
+    margin:0px;
+    background-color:#CC3E00;
     display:inline-block;
-    border-radius:15px
+    border-radius:10px
 }
 
 figcaption {
     text-align:center;
-    font-size:1.25em;
-    color:#664F7B;
+    font-size:2em;
+    color:#2E3C3D;
+    font-weight:900;
 }
 
 main {
@@ -64,31 +65,48 @@ main {
 
 .button {
     font-size:1.25em;
-    background-color:#C7E293;
-    color:#AD8C65;
-    border-radius:14px;
-    padding:10px;
+    background-color:#4A2211;
+    color:#FB888B;
+    border-radius:10px; border:solid 4px #CC3E00;
+    padding:2px 5px;
+    text-align:center;
+    font-family: 'Atma', cursive; 
 }
 
 .button:hover {
-    background-color:#AD8C65;
-    color:#C7E293;
+    color:#4A2211;
+    background-color:#CC3E00;
+    border-color:#FB888B;
+    
+}
+
+img {
+    border-radius:10px;
+}
+
+b, strong {
+    color:#FAB2C8;
+}
+
+mark {
+    padding:0px 13px;
+    background-color:#CC5251;
 }
 
 /*HEADER STYLES*/
 
 header {
     height:100px;
-    background-color:#F4F4F4;
+    background-color:#4A2211;
 }
 
 #logo {
-    color:#ffa31a;
+    color:#7092BE;
     position:relative;
     left:10%;
 }
 #logo:hover {
-    color:#ff6633;
+    color:#FB888B;
 }
 
 /*BANNER STYLES*/
@@ -96,22 +114,23 @@ header {
 #banner {
     overflow:hidden;
     padding:175px 0px;
-    border-top:6px solid #ffa31a;
-    background-color:#F4F4F4;
-    background: url(../images/banner-home.jpg) no-repeat center center #F4F4F4;
+    border-top:6px solid #CC3E00;
+    border-bottom:6px solid #CC3E00;
+    background-color:#4A2211;
+    background: url(../images/banner-home.jpg) no-repeat center center #CC5251;
     background-size:cover;
 }
 
 #bannertext {
     font-size:6em;
     text-align:center;
-    text-shadow:3px 3px 6px #111;
+    text-shadow:5px 10px 2px #2E3C3D;
 }
 
-#banner h3, a {
+#banner h3, #banner a {
     margin:10px;
     position:relative;
-    left:30%;
+    left:25%;
     
 }
 
@@ -129,11 +148,10 @@ header {
     font-size:2.5em;
     margin:0px 40px;
     padding:5px 10px;
-    font-family:'Comic Sans MS', Verdana, sans-serif;
 }
 
 .currentPage {
-    color:#000;
+    color:#7092BE;
 }
 
 /*THREE COLUMN STYLES*/
@@ -152,7 +170,7 @@ header {
 }
 
 .columna h2, .columnb h2, .columnc h2 {
-    font-size:2.25em;
+    font-size:3.25em;
     font-weight:700;
     text-align:center;
     margin:15px 0px;
@@ -164,13 +182,132 @@ header {
 }
 
 
-article span {
-    background-color:#ff7900;
-    color:#fff;
+.columna span, .columnb span, .columnc span {
+    background-color:#CC3E00;
+    color:#2E3C3D;
     display:block;
     text-align:center;
-    font-size:1.8em;
-    font-weight:600;
-    border-radius:4px;
+    font-size:2.5em;
+    font-weight:bolder;
+    border-radius:10px;
     padding:4px 0px;
+}
+
+/*ABOUT ME SECTION*/
+.leftaside {
+    float:left;
+    width:384px;
+    margin-right:24px;
+}
+
+.rightaside {
+    float:right;
+    width:384px;
+    margin-left:24px;
+}
+
+.aboutme {
+    float:right;
+    width:745px;
+}
+
+.about p {
+    text-align:justify;
+}
+
+.blogpost {
+    display:inline-block;
+    margin:20px 0px;
+}
+
+/*FOOTER STYLES*/
+footer {
+    margin-top:20px;
+    height:120px;
+    padding:30px 0px;
+    border-top:solid 6px #CC3E00;
+    background-color:#4A2211;
+    text-align:center;
+}
+
+footer p {
+    color:#FB888B;
+    padding:10px;
+    font-size:2em;
+    
+}
+
+
+/*SOCIAL STYLES*/
+
+.fa {
+    background-color:rgb(0, 113, 96);
+    border:solid 5px #fff;
+    font-size:2em !important;
+    border-radius:100%;
+    width:28px; height:28px;
+    padding:12px;
+    margin:0px 2%;
+}
+
+.social a {
+    color:#FFF;
+}
+
+.social a:hover {
+    color:#FB888B;
+}
+
+.fa-facebook {
+    background-color:#3b5998;
+}
+
+.fa-twitter {
+    background-color:#00aced;
+}
+
+.fa-instagram {
+    background-color:#517fa4;
+}
+
+.fa-linkedin {
+    background-color:#007bb6;
+}
+
+.fa-github {
+    background-color:#000;
+}
+
+/*MISC STYLES*/
+
+#ytvid {
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0px;
+    overflow:hidden;
+}
+
+#ytvid iframe, #ytvid embed {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+
+.maps {
+    display:block;
+    margin:auto;
+    
+    /*width:90%;*/
+    /*margin:0px auto;*/
+}
+
+#form {
+    background-color:#CC3E00;
+    color:#FFFFFF;
+    border:solid 3px #000;
+    width:90%;
+    margin:15px auto;
 }
